Updated .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 #################
+## Endeavour DMS
+#################
+WebContent/WEB-INF/lib
+
+
+#################
 ## Eclipse
 #################
 
