--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 #################
 ## Endeavour DMS
 #################
-WebContent/WEB-INF/lib/*.jar
+#WebContent/WEB-INF/lib/*.jar
 
 
 #################
