--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -8,6 +8,7 @@
 	version="3.0">
   <display-name>EndeavourDMS</display-name>
   <welcome-file-list>
+  	<welcome-file>index.jsp</welcome-file>
     <welcome-file>index.html</welcome-file>
   </welcome-file-list>
   
